--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -8,3 +8,11 @@ main {
   width: calc(100vw-4rem);
   padding: 2rem;
 }
+
+#welcome {
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
