--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -5,7 +5,7 @@ body {
   font-family: "Helvetica", sans-serif;
 }
 main {
-  width: calc(100vw-4rem);
+  width: calc(100vw - 4rem);
   padding: 2rem;
 }
 
