refactor turbo frame

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,7 +4,7 @@
 
 <div id="articles">
   <%= render 'sidebar', articles: @articles %>
-  <%= render @articles.first %>
+  <%= render 'loader', article: @articles.first %>
 </div>
 
 <strong><%= link_to "New article", new_article_path %></strong>
