--- a/app/views/articles/_sidebar.html.erb
+++ b/app/views/articles/_sidebar.html.erb
@@ -1,7 +1,7 @@
 <aside id="sidebar">
   <ul>
   <% articles.each do |article| %>
-    <li><%= link_to article.id, article_path(article), data: { turbo_frame: 'first_turbo' }  %></li>
+    <li><%= link_to article.id, article_path(article), data: { turbo_frame: 'show_article' }  %></li>
   <% end %>
   </ul>
 </aside>
