--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -6,4 +6,13 @@
     <p>
       <%= article.author %>
     </p>
+
+    <strong>Comments</strong>
+    <dl>
+      <% article.comments.each do |comment| %>
+        <dt><%= comment.author %>
+        <dd><%= comment.comment %>
+      <% end %>
+    </dl>
+    <%= link_to 'New comment', new_article_comment_path(article) %>
   </div>
